--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,6 @@
 run:
   timeout: 5m
   tests: false
-  skip-dirs:
-    - vendor
   modules-download-mode: readonly
 
 linters:
@@ -28,4 +26,6 @@ issues:
   exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude-dirs:
+    - vendor
 
