--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,34 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+          cache: true
+
+      - name: Run tests
+        run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
+
+      - name: Display test coverage
+        run: go tool cover -func=coverage.out
+
+      - name: Upload coverage to Codecov (optional)
+        if: github.event_name != 'pull_request'
+        uses: codecov/codecov-action@v4
+        continue-on-error: true
+        with:
+          files: ./coverage.out
+          flags: unittests
+          name: codecov-argazer
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -34,12 +62,12 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
-          args: --timeout=5m
+          args: --timeout=10m
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [test, lint]
     permissions:
       contents: read
       packages: write
