--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ argazer
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
