--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ AG_PROJECTS=*
 AG_APP_NAMES=*
 # AG_LABELS=type=operator,environment=production  # Format: key1=value1,key2=value2
 
-# Notification Channel (telegram, email, or empty for console only)
+# Notification Channel (telegram, email, slack, teams, webhook, or empty for console only)
 AG_NOTIFICATION_CHANNEL=telegram
 
 # Telegram Settings
@@ -24,6 +24,15 @@ AG_EMAIL_SMTP_PASSWORD=your-app-password
 AG_EMAIL_FROM=argazer@example.com
 AG_EMAIL_TO=devops@example.com,team@example.com
 AG_EMAIL_USE_TLS=true
+
+# Slack Settings
+AG_SLACK_WEBHOOK=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Microsoft Teams Settings
+AG_TEAMS_WEBHOOK=https://outlook.office.com/webhook/YOUR/WEBHOOK/URL
+
+# Generic Webhook Settings (sends JSON with "subject" and "message" fields)
+AG_WEBHOOK_URL=https://your-webhook-endpoint.example.com/notify
 
 # General Settings
 AG_VERBOSE=false
