--- a/env.example
+++ b/env.example
@@ -37,4 +37,11 @@ AG_WEBHOOK_URL=https://your-webhook-endpoint.example.com/notify
 # General Settings
 AG_VERBOSE=false
 AG_SOURCE_NAME=chart-repo
+AG_CONCURRENCY=10
+
+# Version Constraint (major, minor, patch)
+# major: Check all versions (default)
+# minor: Only same major version
+# patch: Only same major.minor
+AG_VERSION_CONSTRAINT=major
 
