--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ argazer
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 coverage.out
+coverage.html
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
